testsuite/tests/contrib/lkt_semantic/invalid_import/test.lkt
@invalid import invalid_import
